--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
         <div>
             <li>Buscar productos, marcas y más</li>
             <li>Comprá en cuotas y sin tarjeta de crédito</li>
-            <img src=".\public\images\logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="100" height="100" >
+            <img src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="100" height="100" >
         </div>
         <section>
             <ul>
@@ -41,7 +41,7 @@
         <section>
             <ul>
                 <li>Basado en tu última visita</li>
-                <img src="images/img-cafetera-moulinex.jpg"></li>
+                <img src="/images/img-cafetera-moulinex.jpg"></li>
                 <li>$ 6770</li>
                 <li>40% OFF</li>
                 <li>Cafetera Moulinex</li>
@@ -50,7 +50,7 @@
         <section>
             <ul>
                 <li>Basado en tu última visita</li>
-                <img src="images/img-macbook-pro-2019.jpg"></li>
+                <img src="/images/img-macbook-pro-2019.jpg"></li>
                 <li>$ 6770</li>
                 <li>40% OFF</li>
                 <li>Mac book pro</li>
@@ -59,7 +59,7 @@
         <section>
             <ul>
                 <li>Basado en tu última visita</li>
-                <img src="images/img-samsung-galaxy-s10.jpg"></li>
+                <img src="/images/img-samsung-galaxy-s10.jpg"></li>
                 <li>$ 6770</li>
                 <li>40% OFF</li>
                 <li>Samsung Galaxy</li>
