--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+
+* {
+  font-family: Roboto;
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  background-color: #ebebeb;
+}
+h3 {
+  font-size: 24px;
+}
+p {
+  font-size: 12px;
+}
+
+/*Header */
+
+.header {
+  background-color: #eac926;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+
+
+  .logo-container {
+    display: flex;
+    flex-direction: row;
+    background-color: yellow;
+
+  }
+
+  .logo-item {
+    display: flex;
+    
+    background-color: yellow;
+
   }
