--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer class="footer-style">
 
   <div class="footer-container">
-    <div class="logo-footer"><a href="/"><img src="/images/logo-mercado-liebre.svg" alt="logo" class="logo"></a></div>
+      <div class="logo-container">
+        <div ><img src="images/logo-mercado-liebre.svg" alt="logo-mercado-liebre" width="100" height="100" ></div>
+    </div>
     <div class="flex-item-left">
-
-
 
       <section>
         <ul>
@@ -32,9 +32,9 @@
     <div class="flex-item-left">
       <h3>Contacto</h3>
       <ul class="lista">
-        <li><i class="fas fa-envelope"></i>
+        <li><i class="icon fas fa-envelope"></i>
           <a> contacto@freemercado.com</a></li>
-        <li><i class="fas fa-phone-alt"></i></a>
+        <li><i class="icon  fas fa-phone-alt"></i></a>
           <a>+82 10 74264379</a>
       </ul>
     </div>
@@ -42,9 +42,9 @@
     <div class="flex-item-left">
       <h3>Seguinos</h3>
       <ul class="lista">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-facebook-square"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="icon fab fa-instagram"></i></a>
+        <a href="#"><i class="icon fab fa-facebook-square"></i></a>
+        <a href="#"><i class="icon fab fa-twitter"></i></a>
       </ul>
     </div>
   </div>
